0.1722
    - insert_param, update_param, and assign param can
      be wrapeed by DB function by C<wrap> option
    - added EXPERIMENTAL pass attribute to DBIx::Custom::Mapper
    - removed EXPERIMENTAL ignore attribute from DBIx::Custom::Mapper
0.1721
    - added EXPERIMENTAL DBIx::Custom::Mapper class
    - added EXPERIMENTAL mapper method to DBIx::Custom
0.1720
    - removed placeholder count check
    - added EXPERIMENTAL execute method's id and primary key option.
    - added EXPERIMENTAL DBIx::Custom::Model execute method
0.1719
    - DBIx::Custom support Microsoft Access through DBD::ODBC
0.1718
    - added EXPERIMENTAL DBIx::Custom::Model call_dbi method
    - added EXPERIMENTAL count method
    - added EXPERIMENTAL DBIx::Custom::Model count method
0.1717
    - added EXPERIMENTAL get_table_info
    - added EXPERIMETNAL user_table_info attribute
      and each_table find table info in user_table_info if set.
    - added EXPERIMENTAL get_column_info
    - added EXPERIMENTAL user_column_info attribute
      and each_column find column info in user_column_info if set.
    - connector is automatically set to DBDx::Connector object
      if connector is set to 1 when connect method is called.
0.1716
    - fixed bugs when using DBD::Oracle.
    - added EXPERIMENTAL show_tables method.
0.1715
    - default quote attribute in ODBC driver is changed to "[]"
    - fixed some bug in Microsoft SQL Server
    - added EXPERIMENTAL execute method sqlfilter option
0.1714
    - fixed not backword compatible change in 0.1712 query_buider
0.1713
    - fixed memory leak and connection increasing bug when using model.
0.1712
    - you can set any string as separator
    - fixed memory leak and connection increasing bug, and query_buider method return new object.
    - added EXPERIMENTAL exclude_table attribute
    - added EXPERIMENTAL show_typename method
    - added EXPERIMENTAL show_datatype method
0.1711
    - renamed EXPERIMENTAL available_type_name to available_typename