@@ -3178,28 +3178,6 @@ $source = "a {= {}";
 eval{$builder->build_query($source)};
 like($@, qr/unexpected "{"/, "error : 2");
 
-test 'select() wrap option';
-$dbi = DBIx::Custom->connect;
-eval { $dbi->execute("drop table $table1") };
-$dbi->execute($create_table1);
-$dbi->insert(table => $table1, param => {$key1 => 1, $key2 => 2});
-$dbi->insert(table => $table1, param => {$key1 => 2, $key2 => 3});
-$rows = $dbi->select(
-    table => $table1,
-    column => $key1,
-    wrap => ["select * from (", ") t where $key1 = 1"]
-)->all;
-is_deeply($rows, [{$key1 => 1}]);
-
-eval {
-$dbi->select(
-    table => $table1,
-    column => $key1,
-    wrap => 'select * from ('
-)
-};
-like($@, qr/array/);
-
 test 'select() sqlfilter option';
 $dbi = DBIx::Custom->connect;
 $dbi->user_table_info($user_table_info);
